--- a/React-Native/ZeoDemo/ios/Podfile
+++ b/React-Native/ZeoDemo/ios/Podfile
@@ -26,6 +26,7 @@ if linkage != nil
 end
 
 target 'ZeoDemo' do
+  pod 'InMobiCMP', '2.1.1'
   pod 'ZeotapCollect', '~> 1.3.5'
   config = use_native_modules!
 
