--- a/React-Native/RN-0-75-5/package.json
+++ b/React-Native/RN-0-75-5/package.json
@@ -24,7 +24,7 @@
     "@react-native-community/cli-platform-ios": "15.0.1",
     "@react-native/babel-preset": "0.75.5",
     "@react-native/eslint-config": "0.75.5",
-    "@react-native/gradle-plugin": "^0.78.0",
+    "@react-native/gradle-plugin": "0.75.5",
     "@react-native/metro-config": "0.75.5",
     "@react-native/typescript-config": "0.75.5",
     "@types/jest": "^29.5.13",
